--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <link href="form.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="images/logo.png">
     <title>KAVOUGE.mnl</title>
-    </div>
     <div class="top">
         <nav>
-            <img href="index.html" src="images/kavouge.png" width="150px" height="50px" id=logo alt="Logo" />
+            <a href="index.html" class="link">
+                <img src="images/kavouge.png" width="150px" height="50px" id=logo alt="Logo" />
+            </a>
         </nav>
     </div>
-
+    <div id="page1">
     <div class="container">
         <div class="login">
         <h2>Login</h2>
@@ -25,9 +26,22 @@
         </form>
     </div>
     </div>
+</div>
 </head>
 
 <body>
+    <div id="background-container"></div>
     <script src="script.js"></script>
 </body>
+
+<footer>
+    <div class="bottom">
+            <a href="contact.html">
+                <li>Contact Us</li>
+            </a>
+            <a href="tos.html">
+                <li>Terms & Condition</li>
+            </a>
+    </div>
+</footer>
 </html>
