--- a/register.html
+++ b/register.html
@@ -7,11 +7,14 @@
     <link href="register.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="images/logo.png">
     <title>KAVOUGE.mnl</title>
-    </div>
+    <div id="background-container"></div>
     <div class="top">
         <nav>
-            <img href="index.html" src="images/kavouge.png" width="150px" height="50px" id=logo alt="Logo" />
+            <a href="index.html">
+                <img src="images/kavouge.png" width="150px" height="50px" id=logo alt="Logo" />
+            </a>
         </nav>
+           
     </div>
 
     <div class="container">
