--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
-    <link href="form.css" rel="stylesheet">
+    <link href="login.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="images/logo.png">
     <title>KAVOUGE.mnl</title>
+</head>
+
+<body>
     <div class="top">
         <nav>
             <a href="index.html" class="link">
@@ -27,11 +30,7 @@
     </div>
     </div>
 </div>
-</head>
-
-<body>
     <div id="background-container"></div>
-    <script src="script.js"></script>
 </body>
 
 <footer>
@@ -44,4 +43,15 @@
             </a>
     </div>
 </footer>
+
+<script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-auth.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-database.js";
+    </script>
+<script src="script.js"></script>
 </html>
