--- a/register.html
+++ b/register.html
@@ -7,32 +7,55 @@
     <link href="register.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="images/logo.png">
     <title>KAVOUGE.mnl</title>
+</head>
+<body>
     <div id="background-container"></div>
     <div class="top">
         <nav>
             <a href="index.html">
-                <img src="images/kavouge.png" width="150px" height="50px" id=logo alt="Logo" />
+                <img src="images/kavouge.png" width="150px" height="50px" id="logo" alt="Logo" />
             </a>
         </nav>
-           
     </div>
 
     <div class="container">
         <div class="register">
-        <h2>Register</h2>
-        <form>
-            <input type="text" placeholder="username" required>
-            <input type="date" placeholder="birthday" required>
-            <input type="text" placeholder="e-mail address" required>
-            <input type="password" placeholder="password" required>
-            <input type="submit" value="Register">
-            <a href="index.html" class="link"> Already have an account? Login instead</a>
-        </form>
+            <h2>Register</h2>
+            <form>
+                <input type="text" id="username" placeholder="username" required>
+                <input type="text" id="email" placeholder="e-mail address" required>
+                <input type="password" id="password" placeholder="password" required>
+                <div id="button_container"> 
+                    <button onclick="register()">Register</button>
+                </div>
+                <a href="index.html" class="link"> Already have an account? Login instead</a>
+            </form>
+        </div>
     </div>
-    </div>
-</head>
 
-<body>
-    <script src="script.js"></script>
+    <!-- Firebase Initialization Script -->
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-analytics.js";
+
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: "AIzaSyBPFtkS40lbIC9HZYLLoZBB8XVVTr1EkXY",
+        authDomain: "kavouge-bcbb0.firebaseapp.com",
+        projectId: "kavouge-bcbb0",
+        storageBucket: "kavouge-bcbb0.appspot.com",
+        messagingSenderId: "457526386482",
+        appId: "1:457526386482:web:1d7594a4c3529a54cbc12b",
+        measurementId: "G-P7TED72FC8"
+      };
+
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+    </script>
+
+    <script src="script.js"> </script>
 </body>
 </html>
