--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
     <link href="login.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="images/logo.png">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <title>KAVOUGE.mnl</title>
 </head>
 
@@ -53,5 +54,5 @@
     import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-auth.js";
     import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-database.js";
     </script>
-<script src="script.js"></script>
+<script src="index.js"></script>
 </html>
