--- a/register.html
+++ b/register.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
     <link href="register.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="icon" type="image/x-icon" href="images/logo.png">
     <title>KAVOUGE.mnl</title>
 </head>
@@ -55,7 +56,16 @@
       const app = initializeApp(firebaseConfig);
       const analytics = getAnalytics(app);
     </script>
-
-    <script src="script.js"> </script>
+<footer>
+    <div class="bottom">
+            <a href="contact.html">
+                <li>Contact Us</li>
+            </a>
+            <a href="tos.html">
+                <li>Terms & Condition</li>
+            </a>
+    </div>
+</footer>
+    <script src="index.js"> </script>
 </body>
 </html>
