--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="home.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="images/logo.png">
     <title>KAVOGUE.mnl</title>
+    <section id="one">
     <div class="top">
         <nav>
             <a href="index.html">
@@ -20,12 +21,48 @@
         </nav>
     </div>
     
-
     <div class="tagline">
         <h1> Elevate your scent, <br> define your style.</h1>
         <p> Whether you're buying or just passing by,<br>
         KAVOGUE is here for everyone!</p>
-    </div> 
+    </div>
+    </section>
+
+    <section id="about">
+        <div class="main">
+            <img src="images/logo.png">
+            <div class="about-text">
+                <h1>ABOUT KAVOGUE</h1>
+                
+                <p>Lorem ipsum dolor sit amet, consectetur
+                    <br> adipiscing elit, sed do eiusmod tempor
+                    <br> incididunt ut labore et dolore magna 
+                    <br> aliqua. Ut enim ad minim veniam, quis 
+                    <br> nostrud exercitation ullamco laboris nisi 
+                    <br> ut aliquip ex ea commodo consequat. </p>
+                <button type="button">Get In Touch</button>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact">
+            <h1>Contact Us</h1>
+        <div class="box">
+        <form>
+            <div class="form-group">
+                <input type="text" class="form-control" id="name" name="name" required placeholder="full name">
+            </div>
+            <div class="form-group">
+                <input type="email" class="form-control" id="email" name="email" required placeholder="email address">
+            </div>
+            <div class="form-group">
+ 
+                <textarea class="form-control" id="message" name="message" rows="4" required placeholder="message"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Send Message</button>
+        </form>
+            </div>
+    </section>
 
 </head>
 
@@ -33,3 +70,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+   
