--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             </a>
             <h1>KAVOGUE.MNL</h1>
             <div class="nav-links">
-                <a href="contact.html">Contact Us</a>
-                <a href="about.html">About Us</a>
+                <a id="scrolltocontact" href="#contact">Contact Us</a>
+                <a id="scrolltoabout" href="#about">About Us</a>
             </div>
         </nav>
     </div>
@@ -42,26 +42,30 @@
                     <br> ut aliquip ex ea commodo consequat. </p>
                 <button type="button">Get In Touch</button>
             </div>
-        </div>
+    
+    </div>
     </section>
 
     <section id="contact">
-            <h1>Contact Us</h1>
-        <div class="box">
-        <form>
-            <div class="form-group">
-                <input type="text" class="form-control" id="name" name="name" required placeholder="full name">
+        <img src="images/contact.png" width="20%" length="20%">
+        <h1> Contact Us </h1>
+            <div class="container">
+                <div class="box">
+                    <form>
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="name" name="name" required placeholder="full name">
+                        </div>
+                        <div class="form-group">
+                            <input type="email" class="form-control" id="email" name="email" required placeholder="email address">
+                        </div>
+                        <div class="form-group">
+                            <textarea class="form-control" id="message" name="message" rows="4" required placeholder="message"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Send Message</button>
+                    </form>
+                </div>
             </div>
-            <div class="form-group">
-                <input type="email" class="form-control" id="email" name="email" required placeholder="email address">
-            </div>
-            <div class="form-group">
- 
-                <textarea class="form-control" id="message" name="message" rows="4" required placeholder="message"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Send Message</button>
-        </form>
-            </div>
+        </div>
     </section>
 
 </head>
