--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="top">
         <nav>
             <a href="index.html">
-                <img src="images/logo.png" width="75px" height="75px" id="logo" alt="Logo" />
+                <img src="Images/logo.png" width="75px" height="75px" id="logo" alt="Logo" />
             </a>
             <h1>KAVOGUE.MNL</h1>
             <div class="nav-links">
