--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <section id="about">
         <div class="main">
-            <img src="images/logo.png">
+            <img src="Images/logo.png">
             <div class="about-text">
                 <h1>ABOUT KAVOGUE</h1>
                 
