--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="style.css" rel="stylesheet">
     <link href="home.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="images/logo.png">
@@ -45,24 +46,31 @@
     
     </div>
     </section>
+    <section id="">
+        
+    </section>
 
     <section id="contact">
-        <img src="images/contact.png" width="20%" length="20%">
         <h1> Contact Us </h1>
             <div class="container">
                 <div class="box">
                     <form>
                         <div class="form-group">
-                            <input type="text" class="form-control" id="name" name="name" required placeholder="full name">
+                            <input type="text" class="form-control" id="name" name="name" required placeholder="FULL NAME*">
                         </div>
                         <div class="form-group">
-                            <input type="email" class="form-control" id="email" name="email" required placeholder="email address">
+                            <input type="email" class="form-control" id="email" name="email" required placeholder="EMAIL ADDRESS*">
                         </div>
                         <div class="form-group">
-                            <textarea class="form-control" id="message" name="message" rows="4" required placeholder="message"></textarea>
+                            <textarea class="form-control" id="message" name="message" rows="4" required placeholder="MESSAGE*"></textarea>
+                            <button type="submit" class="btn btn-primary">Send Message</button>
                         </div>
-                        <button type="submit" class="btn btn-primary">Send Message</button>
                     </form>
+                    <div class="icons">
+                        <a href="#" class="fa fa-instagram"></a>
+                        <a href="#" class="fa fa-twitter"></a>   
+                        <a href="#" class="fa fa-facebook"></a>  
+                    </div>
                 </div>
             </div>
         </div>
