--- a/index.html
+++ b/index.html
@@ -66,16 +66,25 @@
                             <button type="submit" class="btn btn-primary">Send Message</button>
                         </div>
                     </form>
-                    <div class="icons">
-                        <a href="#" class="fa fa-instagram"></a>
-                        <a href="#" class="fa fa-twitter"></a>   
-                        <a href="#" class="fa fa-facebook"></a>  
+                        <div class="icons">
+                            <a href="#" class="fa fa-instagram"></a>
+                            <a href="#" class="fa fa-twitter"></a>   
+                            <a href="#" class="fa fa-facebook"></a>  
                     </div>
                 </div>
+                    <div class="contact-details">
+                      <h3>Contact Information</h3>
+                      <p><i class="fa fa-envelope"></i> kavogue@scents.mnl</p>
+                      <h3>Based In</h3>
+                      <p><i class="fa fa-map-marker"></i> Manila, 
+                        Philippines</p>
+                    </div>
             </div>
         </div>
     </section>
+    <!--<section>
 
+    </section>-->
 </head>
 
 <body>
