--- a/index.html
+++ b/index.html
@@ -71,20 +71,37 @@
                             <a href="#" class="fa fa-twitter"></a>   
                             <a href="#" class="fa fa-facebook"></a>  
                     </div>
-                </div>
                     <div class="contact-details">
-                      <h3>Contact Information</h3>
-                      <p><i class="fa fa-envelope"></i> kavogue@scents.mnl</p>
+                      <h3>Contact</h3>
+                      <p>kavogue@scents.mnl</p>
                       <h3>Based In</h3>
-                      <p><i class="fa fa-map-marker"></i> Manila, 
-                        Philippines</p>
+                      <p> Manila, Philippines</p>
                     </div>
+                </div>
             </div>
         </div>
     </section>
-    <!--<section>
-
-    </section>-->
+    <section id="download">
+        <div class="search">
+            <input type="text" id="searchInput" placeholder="Search...">
+            <button id="searchButton">Search</button>
+        </div>
+        <div class="container">
+            <div class="box">   
+                <div class="item">1</div>
+                <div class="item">2</div>
+                <div class="item">3</div>
+                <div class="item">4</div>
+                <div class="item">5</div>
+                <div class="item">6</div>
+                <div class="item">7</div>
+                <div class="item">8</div>
+                <div class="item">9</div>
+                <div class="item">10</div>
+            </div>
+        </div>
+        <div class="shop"></div>
+    </section>
 </head>
 
 <body>
