--- a/index.html
+++ b/index.html
@@ -46,10 +46,6 @@
     
     </div>
     </section>
-    <section id="">
-        
-    </section>
-
     <section id="contact">
         <h1> Contact Us </h1>
             <div class="container">
@@ -87,18 +83,14 @@
             <button id="searchButton">Search</button>
         </div>
         <div class="container">
-            <div class="box">   
-                <div class="item">1</div>
-                <div class="item">2</div>
-                <div class="item">3</div>
-                <div class="item">4</div>
-                <div class="item">5</div>
-                <div class="item">6</div>
-                <div class="item">7</div>
-                <div class="item">8</div>
-                <div class="item">9</div>
-                <div class="item">10</div>
-            </div>
+            <div class="item item-1"></div>
+            <div class="item item-2"></div>
+            <div class="item item-3"></div>
+            <div class="item item-4"></div>
+            <div class="item item-5"></div>
+            <div class="item item-5"></div>
+            <div class="item item-5"></div>
+            <div class="item item-5"></div>
         </div>
         <div class="shop"></div>
     </section>
