--- a/index.html
+++ b/index.html
@@ -39,12 +39,18 @@
                 <div class="about-text">
                     <h1>ABOUT KAVOGUE</h1>
                     
-                    <p>Lorem ipsum dolor sit amet, consectetur
-                        <br> adipiscing elit, sed do eiusmod tempor
-                        <br> incididunt ut labore et dolore magna 
-                        <br> aliqua. Ut enim ad minim veniam, quis 
-                        <br> nostrud exercitation ullamco laboris nisi 
-                        <br> ut aliquip ex ea commodo consequat. </p>
+                    <p>
+                        Welcome to Kavouge.mnl, your online haven for exquisite fragrances. 
+                        <br>At Kavouge.mnl, we're not just a perfume shop; we're a digital sanctuary 
+                        <br>where the essence of luxury meets the convenience of online shopping. Our 
+                        <br>carefully curated selection of scents transcends borders, bringing the 
+                        <br>world's finest fragrances to your fingertips. Dive into a sensory 
+                        <br>experience as you navigate through our virtual aisles, discovering 
+                        <br>captivating perfumes that speak to your unique style. At Kavouge.mnl, 
+                        <br>we're not just selling scents; we're crafting an immersive online 
+                        <br>journey for fragrance enthusiasts. Join us in exploring the art of 
+                        <br>scent at Kavouge.mnl, where your olfactory adventure begins with a click.
+                    </p>
                     <button type="button">Get In Touch</button>
                 </div>
         
@@ -54,6 +60,12 @@
             <div class="download-container-text">
                 <h1 class="container-text1"> <span>Download</span> <br> and Continue Shopping <br> with </h1>
                 <h1 class="container-text2">KAVOUGE</h1>
+                <p class="container-text3">Lorem ipsum dolor sit amet, 
+                    <br>consectetur adipiscing elit, 
+                    <br>sed do eiusmod tempor incididunt ut 
+                    <br>labore et dolore magna aliqua. Ut enim 
+                    <br>ad minim veniam, quis nostrud exercitation 
+                    <br>ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
 
             </div>
             <div class="container">
@@ -78,7 +90,7 @@
                 </ul>
                </table>
             </div>
-            <div class="shop"></div>
+            <button type="button" class="button-shop">Shop Now</button>
         </section>
         <section id="contact">
             <h1> Contact Us </h1>
