--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
 <script>
     document.getElementById('downloadButton').addEventListener('click', function() {
         var link = document.createElement('a');
-        link.href = 'KVG_APP.zip'; // Replace with the actual path to your ZIP file
-        link.download = 'KVG_APP.zip';
+        link.href = 'https://download1479.mediafire.com/cja698lx5tfgdeEgY90PVzNw44NVncRnLbA6trI7VUJAmsXCF22tk5vPQqLYAkA3WXuPfyo_ksE4zl_H8FJVPs-L8PCxas3ucAzuLxZk0U4wJpFYM4ehMEhGzplUodwEpKHACKu3qc5hGZj8mucgd7BBxNHeye45b1smlWx5Zmc4Mi0/oa3z7t6r5oud7lq/KVG_APP.zip';
+        link.download = 'https://download1479.mediafire.com/cja698lx5tfgdeEgY90PVzNw44NVncRnLbA6trI7VUJAmsXCF22tk5vPQqLYAkA3WXuPfyo_ksE4zl_H8FJVPs-L8PCxas3ucAzuLxZk0U4wJpFYM4ehMEhGzplUodwEpKHACKu3qc5hGZj8mucgd7BBxNHeye45b1smlWx5Zmc4Mi0/oa3z7t6r5oud7lq/KVG_APP.zip';
         document.body.appendChild(link);
         link.click();
         document.body.removeChild(link);
