--- a/kavouge.github.io-main/index.html
+++ b/kavouge.github.io-main/index.html
@@ -22,6 +22,7 @@
                 <div class="nav-links">
                     <a id="scrolltocontact" href="#contact">Contact Us</a>
                     <a id="scrolltoabout" href="#about">About Us</a>
+                    <a id="scrolltoteam" href="#team">Our Team</a>
                 </div>
             </nav>
         </div>
